--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <h2>About Me</h2>
       <p>
         สวัสดี 👋 ผมชื่อ <strong>Takab</strong> นี่คือเว็บไซต์โปรไฟล์ส่วนตัว
-        คุณสามารถแก้ไขเนื้อหา เพิ่มรูปภาพ หรือเชื่อมลิงก์ไปยังส่วนต่าง ๆ ได้ตามต้องการ
+        
       </p>
     </div>
 
@@ -160,8 +160,8 @@
     <div class="card" id="contact">
       <h2>Contact</h2>
       <p>
-        📧 Email: your@email.com<br />
-        🌍 Website: https://yourwebsite.com<br />
+        📧 Email: takabphnom@gmail.com<br />
+        🌍 Website: http://unityth.thddns.net:6060<br />
         🔗 Social: Facebook | Instagram | GitHub
       </p>
     </div>
